# usma_ardrone

./: .gitignore  README.md
ardrone_face_tracker/: CMakeLists.txt  package.xml
ardrone_face_tracker/config/: track.yaml
ardrone_face_tracker/launch/: face_tracker.launch
ardrone_face_tracker/src/: face_tracker.py
camera_info/: ardrone_front_234687.txt  cal.sh
gazebo_descriptions/: CMakeLists.txt  package.xml
gazebo_plugins/: CMakeLists.txt  package.xml
matlab/: headingchannelIdentification.sid  mpc_1604.m  script_20170614_plot_ardrone_from_bag.m  uft_1604.m
matlab/favorites/: sc_mpc_1604.m  sc_uft_1604.m
msg_to_tf/: CMakeLists.txt  package.xml
msg_to_tf/src/: msg_to_tf.cpp
notes/: demo.py
optitrack_controller/: CMakeLists.txt  README.md  Readme.md  cruft.md  package.xml
optitrack_controller/config/: facetrack.yaml  yolo.yaml  yolo_pistol.yaml  yolov3.yaml
optitrack_controller/launch/: alexey_darknet.launch  ardrone.launch  ardrone_direct.launch  ardrone_driver_EECSDS3.launch  ardrone_driver_ardrone.launch  ardrone_driver_linksys.launch  ardrone_eecsds3.launch  belkin.launch  cruft_track_face.launch  denmpc_master.launch  denmpc_params.launch  face_centroid_cmd.launch  face_tracker.launch  face_tracking_autopilot.launch  killNodes.launch  liftoff.launch  optitrackAutopilot.launch  pistol_demo.launch  saveARDroneImages.launch  test.launch  test_face.launch  test_vrpn.launch  track_face.launch  track_face_mpc.launch  uav_optitrack_feedback.launch  vrpn.launch  yolo.launch  yolo_demo.launch
optitrack_controller/msg/: README.md
optitrack_controller/src/: calArdrone.py  damped_oscillator.cpp  faceCentroidToAutopilot.py  faceTrackingAutopilot.py  face_tracker.py  face_tracker_imgmsg.py  image_converter.py  killNodes.cpp  listenForKill.cpp  optitrackAutopilot.cpp  saveArdroneImages.py  simplePosePublisher.py  vrpn_heading.py
optitrack_controller/srv/: README.md
scripts/: build_ardrone.bash  makedirs.sh
usma_ardrone/: CMakeLists.txt  package.xml
usma_ardrone/scripts/: copydataTO.sh  ffmpeg_mov2mp4.sh  makedirs.sh
usma_ardrone_gazebo/: CMakeLists.txt  README.md  package.xml
usma_ardrone_gazebo/config/: gazebo.rviz  gazebo_kobuki.rviz  gazebo_kobuki_uav.rviz  gazebo_kobuki_uav2.rviz  gazebo_kobuki_uav_tags.rviz
usma_ardrone_gazebo/launch/: empty_world.launch  gazebo_logger.launch  gazebo_track_face.launch  hast.launch  rviz.launch  rviz_tags.launch  spawn_robots.launch
usma_ardrone_gazebo/src/: gazebo_logger.py
usma_ardrone_gazebo_msgs/: CMakeLists.txt  package.xml
usma_descriptions/: CMakeLists.txt  package.xml
usma_descriptions/UAV/launch/: UAV_20180430_001.launch  UAV_20180619_021.launch  spawn_ardrone.launch  spawn_ardrone2.launch  usma_ardrone_0.launch
usma_descriptions/UAV/meshes/: ardrone_rgb.blend  ardrone_rgb.blend1  ardrone_rgb.dae  ardrone_rgb_2.blend  ardrone_rgb_2.blend1
usma_descriptions/UAV/urdf/: ardrone_base.urdf.xacro  ardrone_rviz.urdf.xacro  ardrone_rviz_base.urdf.xacro  ardrone_sensors.urdf.xacro  link_led.urdf.xacro  spawn_led.urdf.xacro  usma_ardrone_base.urdf.xacro  usma_ardrone_rviz.urdf.xacro  usma_ardrone_rviz_base.urdf.xacro  usma_ardrone_sensors.urdf.xacro
usma_descriptions/UAV/urdf/sensors/: generic_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  sonar_sensor.urdf.xacro
usma_descriptions/common/urdf/: common_properties.gazebo  grey_block.urdf.xacro
usma_descriptions/models/: asphalt.model  grey_block.model  wooden_cube.model
usma_descriptions/worlds/: empty.world
usma_mpc/: CMakeLists.txt  package.xml  readme.md
usma_mpc/config/: gazebo_scenario_params.yaml  live_scenario_params.yaml  scenario_params.yaml
usma_mpc/launch/: denmpc_ardrone.launch  denmpc_params.launch  gazebo.launch  liftoff.launch  mpc.launch  mpc_logger.launch  test.launch  vrpn_linksys.launch  vrpn_test.launch
usma_mpc/src/: mpc_logger.py  simplePosePublisher.py  squarePosePublisher.py
usma_plugins/: CMakeLists.txt  package.xml
usma_plugins/include/usma_ardrone/: sensor_model.h  usma_ardrone_imu_plugin.h  usma_ardrone_ros_baro.h  usma_ardrone_simple_controller.h  usma_ardrone_state_controller.h
usma_plugins/msg/: ardrone_pose.msg  pid3.msg  pid_controller.msg  pid_controllers.msg
usma_plugins/src/: usma_ardrone_imu_plugin.cpp  usma_ardrone_ros_baro.cpp  usma_ardrone_simple_controller.cpp  usma_ardrone_state_controller.cpp
usma_plugins/urdf/: usma_ardrone_plugins.urdf.xacro  usma_ardrone_sensors.urdf.xacro  usma_ardrone_simple_controller.urdf.xacro
videos/: ffmpeg_mov2mp4.sh
wpa_support/: CMakeLists.txt  README.md  connect_belkin.sh  package.xml
wpa_support/script/: ARAutoConnect.sh  AutoConnectTest.sh  DL_autoconnect_log.sh  connect  connect_belkin  connect_linksys  install  install_belkin  install_linksys  log  sandbox.sh  sandbox2.sh  update_autocorrect.sh  wpa.sh  wpa_belkin.conf  wpa_eecsds3.conf  wpa_linksys.conf  wpa_supplicant.conf
