<?xml version="1.0"?>
<package format="2">
  <name>optitrack_controller</name>
  <version>0.0.0</version>
  <description>The optitrack_controller package</description>

  <maintainer email="benjamin@todo.todo">benjamin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>usma_plugins</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>usma_plugins</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>usma_plugins</exec_depend>

  <export>
  </export>
</package>
