<?xml version="1.0"?>
<package>
<!-- <package format="2"> -->
	<name>hast_gazebo</name>
	<version>0.0.0</version>
	<description>The hast_gazebo package</description>
	<maintainer email="benjamin@todo.todo">benjamin</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<!-- <depend>gazebo_ros</depend> -->
	<build_depend>gazebo_ros</build_depend>
	<run_depend>gazebo_ros</run_depend>
	<!--<run_depend>cvg_sim_gazebo_plugins</run_depend>-->

	<export>
		<gazebo gazebo_media_path="${prefix}" />
	</export>
</package>
