<?xml version="1.0"?>
<package>
  <name>usma_mpc</name>
  <version>0.0.0</version>
  <description>Additional support for denmpc</description>
  <maintainer email="benjamin@todo.todo">benjamin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>optitrack_controller</run_depend>
  <run_depend>denmpc</run_depend>

  <export>
  </export>
</package>
