<?xml version="1.0"?>
<package>
  <name>wpa_support</name>
  <version>0.0.0</version>
  <description>Additional support for denmpc</description>
  <maintainer email="benjamin@todo.todo">benjamin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
